# parking_service

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
parking_service/: app.py  motor_api_service.py  parkings.db  test.py
