[tool.poetry]
name = "parking-service"
version = "0.1.0"
description = ""
authors = ["Niklas Alexander Shern <nashern@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.22"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"
requests = "^2.31.0"
streamlit = "^1.27.2"
flask-mail = "^0.9.1"
events = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
